src/profile.css
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Quicksand:wght@300..700&family=Slabo+27px&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=M+PLUS+Rounded+1c&family=Quicksand:wght@300..700&family=Slabo+27px&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  width: 100%;
  background-color: #1d0327;
  color: #d1d5db;
  font-family: "Heebo", sans-serif;
}

.header {
  width: 100%;
  position: relative;
  background-color: #1d0327;
  padding: 1rem 0;
  text-align: right;
}

.nav-links {
  display: flex;
  justify-content: flex-end;
  gap: 1rem;
  margin-right: 20px;
}

.nav-links button {
  background: none;
  color: #d1d5db;
  border: none;
  font-size: 1rem;
  cursor: pointer;
  transition: 0.3s;
}

.nav-links button:hover {
  color: #646cff;
}

.nav-links .btn-resume {
  color: #646cff;
  border: 1px solid hsl(273, 63%, 28%);
  border-radius: 2px;
  padding: 0.5rem 1rem;
}

.nav-links .btn-resume:hover {
  color: #d1d5db;
  border-color: rgb(107, 52, 151);
}

.resume,
.about,
.experience,
.works,
.contact {
  margin-top: 20rem;
}

.content-wrapper {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 25%;
}

.resume {
  display: flex;
  flex-direction: column;
}

.resume-greeting {
  color: #646cff;
  font-size: 0.8rem;
  font-family: 'Fira Code', monospace;
}

.resume-name {
  color: white;
}

.resume-name,
.resume-proficiency {
  font-size: 2.3rem;
  font-weight: bold;
  letter-spacing: 2px;
}

.resume-proficiency {
  opacity: 0.7;
}

.resume-description {
  font-size: 1rem;
}

.about {
  display: flex;
  flex-direction: column;
}

.profile-about {
  display: flex;
}

.profile-photo {
  width: 150px;
  height: 180px;
  border-radius: 4px;
  background-color: gray;
  flex-shrink: 0;
}

.experience {
  /* */
}

.works {
  /* */
}

.contact {
  text-align: center;
}

.link-format {
  display: flex;
  justify-content: center;
  gap: 1.2rem;
}

.contact-link {
  text-decoration: none;
  color: #d1d5db;
  font-size: 1.2rem;
  gap: 1.2rem;
  transition: color 0.3s;
}

.contact-link:hover {
  color: #646cff;
}

.easter-egg {
  position: fixed;
  bottom: 10px;
  right: 15px;
  font-family: "Orbitron", sans-serif;
  font-size: 1rem;
  color: #ff0000;
  opacity: 0.8;
}

.serial-number {
  writing-mode: vertical-rl;
  font-size: 0.5rem;
}

.footer {
  text-align: center;
  font-size: 0.9rem;
  margin-top: 15rem;
}

@media (max-width: 680px) {


  .content-wrapper {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 15%;
  }

  .resume,
  .about,
  .experience,
  .works,
  .contact {
    margin-top: 10rem;
  }

  .resume-name,
  .resume-proficiency {
    font-size: 1.8rem;
    font-weight: bold;
    letter-spacing: 1px;
  }

  .profile-about {
    display: flex;
    flex-direction: column;
  }

  .profile-photo {
    margin: 0 auto;
    margin-top: 20px;
    width: 100px;
    height: 130px;
  }
}

